--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,15 @@ services:
     ports:
       - "9200:9200"
     restart: unless-stopped
+    user: "0"
     command: >
       bash -c '
+        chown -R 1000:1000 /usr/share/elasticsearch/data /usr/share/elasticsearch/plugins
         if [ ! -d /usr/share/elasticsearch/plugins/analysis-ik ]; then
           echo "Installing IK Analysis plugin..."
-          elasticsearch-plugin install --batch https://release.infinilabs.com/analysis-ik/stable/elasticsearch-analysis-ik-8.15.0.zip
+          su elasticsearch -c "elasticsearch-plugin install --batch https://release.infinilabs.com/analysis-ik/stable/elasticsearch-analysis-ik-8.15.0.zip"
         fi
-        exec /usr/local/bin/docker-entrypoint.sh elasticsearch
+        exec su elasticsearch -c "/usr/local/bin/docker-entrypoint.sh elasticsearch"
       '
     healthcheck:
       test: ["CMD-SHELL", "curl -sf http://localhost:9200/_cluster/health || exit 1"]
