feat: add custom entrypoint script for Elasticsearch container and set user permissions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   elasticsearch:
     build: docker/elasticsearch
     container_name: search-bot-es
+    user: "0"
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
