--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "search-bot-rs"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "search-bot-rs"
+path = "src/main.rs"
+
+[[bin]]
+name = "migrate"
+path = "src/bin/migrate.rs"
+
 [dependencies]
 # Telegram bot framework (with webhook support)
 teloxide = { version = "0.17.0", features = ["macros", "webhooks-axum"] }
@@ -10,8 +18,13 @@ teloxide = { version = "0.17.0", features = ["macros", "webhooks-axum"] }
 # Elasticsearch official client
 elasticsearch = "8.5.0-alpha.1"
 
+# MongoDB driver
+mongodb = "3.1"
+futures = "0.3"
+
 # Async runtime
 tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
